test/Availability/availability_swiftui.swift
// RUN: %target-typecheck-verify-swift -verify -target %target-cpu-apple-macosx12.0 -module-name SwiftUI -library-level api
// RUN: not %target-typecheck-verify-swift -verify -target %target-cpu-apple-macosx12.0 -module-name Other -library-level api

// REQUIRES: OS=macosx

@available(macOS 11, *)
public class LessAvailable {}

@available(macOS 10.15, *)
@usableFromInline
class AnyColorBox: LessAvailable {} // Ok, exception specifically for AnyColorBox

@available(macOS 10.15, *)
@usableFromInline
class OtherClass: LessAvailable {} // expected-error {{'LessAvailable' is only available in macOS 11 or newer; clients of 'SwiftUI' may have a lower deployment target}}
